public/css/components/cookie-consent.css
#cookie-banner {
  --banner-bg: oklch(from var(--body-bg) 0.33 0.045 275 / 1);
  box-sizing: border-box;
  position: fixed;
  bottom: 0;
  width: 100%;
  background-color: var(--banner-bg);
  border-top: 1px solid oklch(from var(--banner-bg) 0.35 c h / 1);
  color: #f3f3f3;
  padding-inline: 1.875rem;
  padding-block: 3.125rem 3.5rem;
  text-align: center;
  display: none;
  z-index: 999;
}

@media (min-width: 1025px) {
  #cookie-banner {
    padding-block: 2.25rem 2.625rem;
  }
}

.cookie-consent__text:first-child {
  margin-block: 0 1.25rem;
}

.cookie-consent__actions {
  display: grid;
  justify-content: center;
  gap: 1rem;
  grid-template-columns: repeat(2, minmax(9.5rem, 12rem));
}

@media (max-width: 480px) {
  .cookie-consent__actions {
    grid-template-columns: 1fr;
  }
}

.cookie-consent__btn {
  background-color: white;
  border: 1px solid transparent;
  border-radius: var(--radius-sm);
  padding: 0.5625rem 1rem;
  cursor: pointer;
  color: black;
  font-weight: bold;
  transition: all 0.2s;
}

@media (hover: hover) {
  .cookie-consent__btn:hover {
    background-color: transparent;
    border: 1px solid white;
    color: white;
  }
}

